--- a/src/main/resources/templates/application.properties
+++ b/src/main/resources/templates/application.properties
@@ -6,3 +6,11 @@ spring.datasource.url=jdbc:postgresql://localhost/postgres
 spring.datasource.username=alex
 spring.datasource.password=alex
 !--spring.jpa.generate-ddl=true
+
+spring.mail.host=smtp.mail.ru
+spring.mail.port=587
+spring.mail.username=gorchok
+spring.mail.password=171711111984apv
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
